<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.dopra.authentication.Register">

        <EditText
            android:id="@+id/reg_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/register_fullname_placeholder"
            android:inputType="textCapWords|textPersonName"
            android:textAlignment="viewStart"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="7dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/register_email_placeholder"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_fullname" />

        <EditText
            android:id="@+id/reg_psw1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/register_psw1_placeholder"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:typeface="sans"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_email" />

        <EditText
            android:id="@+id/reg_psw2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/register_psw2_placeholder"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:typeface="serif"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_psw1" />

        <CheckBox
            android:id="@+id/reg_tyc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/reg_psw2"
            app:layout_constraintBottom_toBottomOf="@+id/reg_tyc_link"
            app:layout_constraintTop_toTopOf="@+id/reg_tyc_link" />

        <Button
            android:id="@+id/reg_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/holo_blue_light"
            android:onClick="registerAction"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/register_submitButton_text"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"
            tools:layout_editor_absoluteY="51dp"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/reg_tyc_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="31dp"
            android:text="I agree Terms and Conditions"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/reg_tyc"
            app:layout_constraintRight_toRightOf="@+id/reg_psw2"
            app:layout_constraintTop_toBottomOf="@+id/reg_psw2"
            tools:text="@string/register_tyc_text" />
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>